Only shade adventure in Bungee module, bump Java req and dependencies This simplifies text handling a lot by directly using each platform's native adventure text component support (except for Bungee of course) instead of having a separate, pre-shaded adventure module that every other module has to depend on and convert between.
Due to various dependency bumps, the required Java version is now 21.